<resources>
    <string name="app_name">study_project_01</string>
    <string name="setting_clean_cache">清理缓存</string>
    <string name="language_label">语言</string>
    <string name="language_china">简体中文</string>
    <string name="no_login_hint">登录/注册</string>
    <string name="me_user_info_label">个人主页</string>
    <string name="publish">发布</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="praise">获赞</string>
    <string name="me_my_star_label">我的收藏</string>
    <string name="me_my_comment_label">我的评论</string>
    <string name="me_my_admire_label">我的点赞</string>
    <string name="me_preview_history_label">浏览历史</string>
    <string name="me_message_label">消息</string>
    <string name="me_artcle_manage_label">文章管理</string>
    <string name="me_read_model_label">阅读模式</string>
    <string name="me_feedback_label">反馈</string>
    <string name="me_setting_label">设置</string>
</resources>
